--- a/client/src/app/layout/header/header.component.scss
+++ b/client/src/app/layout/header/header.component.scss
@@ -1,12 +1,12 @@
 .custom-badge .mat-badge-content {
     width: 24px;
     height: 24px;
-    font-style: 14px;
+    font-size: 14px;
     line-height: 24px;
 }
 
 .custom-badge .mat-icon {
-    font-style: 32px;
+    font-size: 32px;
     width: 32px;
     height: 32px;
 }
