--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -30,5 +30,17 @@ button.match-input-height {
 }
 
 .mdc-notched-outline__notch {
-    border-right-style: none !important;
+    border-right-style: none !important
+}
+
+.mat-mdc-snack-bar-container.snack-error {
+    --mdc-snackbar-container-color: red;
+    --mat-snack-bar-button-color: #fff;
+    --mdc-snackbar-supporting-text-color: #fff;
+}
+
+.mat-mdc-snack-bar-container.snack-success {
+    --mdc-snackbar-container-color: green;
+    --mat-snack-bar-button-color: #fff;
+    --mdc-snackbar-supporting-text-color: #fff;
 }
